--- a/src/main/resources/templates/item/cadastro.html
+++ b/src/main/resources/templates/item/cadastro.html
@@ -15,6 +15,7 @@
         <a class="btn btn-dark btn-sm" th:href="@{/contrato/cadastrar}">Retornar</a>
     </div>
 
+
     <div class="card" th:if="${msg == null}">
         <div class="card text-white bg-dark p-1 text-center">
             <p class="text-white">Cadastrar Itens do Contrato</p>
@@ -45,7 +46,8 @@
                             <p class="text-dark" th:text="${contrato_cpf_cnpj}"></p>
                         </th>
                         <th>
-                            <p class="text-dark" th:text="${contrato_dataVencimento}"></p>
+                            <p class="text-dark" th:text="${contrato_dataVencimento}" ></p>
+                            <input type="hidden" th:value="${contrato_dataVencimento}" id="vencimentocontrato">
                         </th>
                         <th>
                             <p class="text-dark" th:text="${#numbers.formatCurrency(contrato_valor)}" style="text-align: right;"></p>
@@ -95,9 +97,22 @@
             </table>
         </div>
 
-        <div class="alert alert-danger mt-3" th:if="${msgcontrato != null}">
+<!--        <div class="alert alert-danger mt-3" th:if="${msgcontrato != null}" id="divmsgcontratoitem">-->
+<!--            <div>-->
+<!--                <p id="msgcontratoitem" th:text="${msgcontrato}"></p>-->
+<!--            </div>-->
+<!--        </div>-->
+
+
+<!--        <div class="alert alert-danger mt-3">-->
+<!--            <div>-->
+<!--                <p th:text="${msgcontrato}"></p>-->
+<!--            </div>-->
+<!--        </div>-->
+
+        <div class="alert alert-danger mt-3" id="divmsgitem">
             <div>
-                <p th:text="${msgcontrato}"></p>
+                <p id="msgitem"></p>
             </div>
         </div>
 
@@ -113,8 +128,14 @@
 
                 <div class="form-group mb-1">
                     <label >Vencimento:</label>
-                    <input class="form-control" type="date" th:field="*{dataVencimento}" min="0.01" step="0.01" th:value="*{dataVencimento}" id="vencimentoDP"  name="vencimentoDP" required/>
+                    <input class="form-control" type="date" th:field="*{dataVencimento}" min="0.01" step="0.01" th:value="*{dataVencimento}" id="vencimentoDP"  name="vencimentoDP" required onfocusout="validaDataItem()">
                 </div>
+
+
+<!--                <div class="form-group mb-3">-->
+<!--                    <label th:for="data">Vencimento</label>-->
+<!--                    <input class="form-control" name="data" th:type="date" th:field="*{dataVencimento}" th:value="*{dataVencimento}" id="datacontrato"  required onfocusout="validaData()">-->
+<!--                </div>-->
 
 
                 <div class="form-group mb-1">
