--- a/src/main/resources/templates/contratos/emprestimo.html
+++ b/src/main/resources/templates/contratos/emprestimo.html
@@ -26,6 +26,16 @@
                 </div>
 
                 <div class="form-group mb-3">
+                    <label th:for="data">Data de Nascimento</label>
+                    <input class="form-control" name="data" th:type="text" th:field="*{dataNascimento}" th:value="*{dataNascimento}" placeholder="dd/mm/aaaa" onfocus="(this.type='date')" id="datanascimento" min="" max="" required onfocusout="trataDataNascimento()">
+                </div>
+
+                <div class="form-group mb-3"></div>
+                <label >Taxa Mensal:</label>
+                <input hidden th:value="${taxa}" id="taxainput">
+                <p id="taxaoutput"></p>
+
+                <div class="form-group mb-3">
                     <label >Valor:</label>
                     <input class="form-control" type="number" th:field="*{valor}" th:value="*{valor}" min="100" max="1000" step="0.01" name="cpf_cnpj" id="valoremprestimo" required>
                 </div>
