--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -140,12 +140,10 @@
                 divmsgcontratoElemento.style.display="none";
             }
 
-<!--           ============================================================ -->
             const divmsgemprestimoElemento = document.getElementById('divmsgemprestimo')
             if (divmsgemprestimoElemento) {
                 divmsgemprestimoElemento.style.display="none";
             }
-<!--           ============================================================ -->
 
             const divmsgItemElemento = document.getElementById('divmsgitem');
             if (divmsgItemElemento) {
@@ -167,17 +165,10 @@
                 return dataRetorno;
             }
 
-<!--            ========================================================================================-->
-
             function validaID() {
                 const cpfcnpjElement = document.getElementById('cpfcnpj');
                 var cpfcnpj = cpfcnpjElement.value;
                 cpfcnpj = cpfcnpj.replaceAll('.','').replaceAll('-','').replaceAll('/','');
-                console.log(cpfcnpj);
-
-<!--                const cpfcnpjElement = document.getElementById('cpfcnpj');-->
-<!--                const cpfcnpj = cpfcnpjElement.value;-->
-
 
                 const msgemprestimoElemento = document.getElementById('msgemprestimo');
                 const divmsgemprestimoElemento = document.getElementById('divmsgemprestimo');
@@ -208,22 +199,6 @@
 
 
             }
-
-<!--            ========================================================================================-->
-
-<!--            function valida() {-->
-<!--                const cpfcnpjElement = document.getElementById('cpfcnpj');-->
-<!--                const cpfcnpj = cpfcnpjElement.value;-->
-<!--                const msgcontratoElemento = document.getElementById('msgcontrato');-->
-<!--                const divmsgcontratoElemento = document.getElementById('divmsgcontrato');-->
-<!--                if (validaCPF(cpfcnpj) || validaCNPJ(cpfcnpj)) {-->
-<!--                    divmsgcontratoElemento.style.display="none";-->
-<!--                } else {-->
-<!--                    divmsgcontratoElemento.style.display="block";-->
-<!--                    msgcontratoElemento.innerHTML = "CPF/CNPJ inválido!";-->
-<!--                    cpfcnpjElement.focus();-->
-<!--                }-->
-<!--            }-->
 
             function validaCPF(cpf) {
                 if (cpf.length < 11) {
@@ -417,8 +392,25 @@
                 }
             }
 
+            function trataDataNascimento() {
+
+                const idade = 20;
+                console.log("Tratando data de nascimento");
+
+                const taxaInputElemento = document.getElementById('taxainput');
+                const taxaOutputElemento = document.getElementById('taxaoutput');
+
+                console.log(taxaInputElemento.value);
+
+                taxaOutputElemento.innerHTML = taxaInputElemento.value;
+<!--                <input hidden th:value="${taxa}" id="taxainput">-->
+<!--                <p id="taxaoutput"></p>-->
+
+            }
+
 <!--            Créditos pelas funções abaixo:-->
 <!--            https://pt.stackoverflow.com/questions/199264/como-faco-uma-mascara-para-um-input-->
+
            function mCNPJ(cnpj){
 				cnpj=cnpj.replace(/\D/g,"")
 				cnpj=cnpj.replace(/^(\d{2})(\d)/,"$1.$2")
